--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,3 +1,8 @@
 linters:
   rubocop:
     display_cop_names: true
+    linters:
+    flake8:
+    eslint:
+    config: "./eslint.config"
+    csslint:
