--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,8 +1,3 @@
 linters:
-  rubocop:
-    display_cop_names: true
-    linters:
-    flake8:
-    eslint:
-    config: "./eslint.config"
-    csslint:
+  stylelint:
+    config: 'stylelint.config.js'
